--- a/wiki_language.Rmd
+++ b/wiki_language.Rmd
@@ -89,17 +89,19 @@ curl -X GET "https://wikimedia.org/api/rest_v1/metrics/legacy/pagecounts/aggrega
 "2008-01" - beginning
 
 ```{r}
-years <- 2008:2020
-all_years <- c()
+time_data <- function() {
+  years <- 2008:2020
+  all_years <- c()
 
-for (y in years) {
-  all_years <- c(all_years, gen_months(y))  
+  for (y in years) {
+    all_years <- c(all_years, gen_months(y))  
+  }
+  list(
+    legacy=all_years[1:which(all_years =="2015-06")],
+    new=all_years[which(all_years =="2015-07"):which(all_years =="2020-07")]
+  )
 }
 
-legacy_years <- all_years[1:which(all_years =="2015-06")]
-new_years <- all_years[which(all_years =="2015-07"):which(all_years =="2020-07")]
-
-legacy_years
-new_years
+time_data()
 ```
 
