--- a/wiki_language_final.Rmd
+++ b/wiki_language_final.Rmd
@@ -7,8 +7,7 @@ output: html_notebook
 ```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 library(xml2)
-#library(RCurl)
-library(curl)
+
 library(RSQLite)
 library(httr) # request
 library(lubridate) # dates
@@ -17,6 +16,7 @@ library(stringi) # html2txt
 library(rnaturalearth)
 library(rnaturalearthdata)
 library(sf)
+library(countrycode)
 ```
 
 
@@ -98,8 +98,9 @@ get_total_views <- function(wiki_lang, year_month) {
 get_total_views("de","2018-01") 
 
 ```
+
 ```{r}
-# returns top 140 languages of wikipedia
+# returns top 150 languages of wikipedia
 get_languages <- function() {
   read_html("https://stats.wikimedia.org/EN/TablesPageViewsMonthlyOriginalCombined.htm") %>%
     xml_find_all("//*[contains(text(),'All&nbsp;languages')][3]") %>%
@@ -178,7 +179,73 @@ dbListTables(conn)
 
 ### SQLite use
 ```{r}
+
 conn <- dbConnect(RSQLite::SQLite(), "wiki_lang.db")
 dbGetQuery(conn, "SELECT * FROM languages LIMIT 10")
 dbDisconnect(conn)
 ```
+
+
+```{r}
+dbGetQuery(conn, "select * from views_per_country") %>% 
+  select(country, lang, views_mobile) %>% 
+  (function(df) # self reference
+    df %>% 
+     group_by(country) %>% 
+     summarise(mobile_total = sum(views_mobile), .groups = 'drop') %>%
+     right_join(df, by=c('country'))
+   ) %>% 
+  mutate(prc=round(views_mobile/mobile_total,3)) %>% 
+  select(country, lang, prc) %>% 
+  filter(prc > 0.01) %>% 
+  arrange(country, desc(prc))  %>% 
+  #####
+  filter(country!='--') %>% 
+  mutate(country=countrycode(country, 'iso2c','country.name', 
+                             custom_match = c('XK' = 'Kosovo'))) %>% 
+  left_join(dbGetQuery(conn, "select * from languages"), by = c('lang'='wiki_name')) %>% 
+  select(country, language, prc) -> top_langs
+
+top_langs
+```
+
+```{r}
+top_langs %>% 
+  group_by(country) %>% 
+  slice_max(prc, n=1, with_ties = FALSE) %>% 
+  arrange(country) %>% 
+  mutate(cont=countrycode(country, 'country.name','continent', nomatch = '-')) %>% 
+  filter(cont=='Europe') %>% 
+  ungroup() %>% 
+  select(language) %>% 
+  count(language) %>% 
+  arrange(desc(n)) %>% 
+  filter(n > 1) -> multi_country_lang
+
+multi_country_lang
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
